--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18" />
           </svg>
         </div>
+        <div class="category-screen screen">
+          <div class="head-wrapper">
+            <div class="back-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18" />
+              </svg>
+            </div>
+          </div>
+        </div>
         <div class="options">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="w-6 h-6">
@@ -135,6 +145,48 @@
           </svg>
         </div>
       </div>
+      <!-- options form -->
+
+      <div class="options-form">
+        <h1 class="form-heading">PHYSICAL TASK</h1>
+        <p class="form-subheading">Run 5km in 45 minute</p>
+        <div class="input-group">
+          <label for="student-name">Name</label>
+          <input type="text" id="student-name" required />
+        </div>
+        <div class="input-group">
+          <label for="student-id">Student ID</label>
+          <input type="text" id="student-id" required />
+        </div>
+        <div class="input-group">
+          <label for="student-email">Email</label>
+          <input type="file" id="student-file" required />
+        </div>
+        <div class="btns">
+          <button class="submit-btn">Submit</button>
+        </div>
+      </div>
+
+      <div class="options-form" id="form-academic-task">
+        <h1 class="form-heading">ACADEMIC TASK</h1>
+        <p class="form-subheading">Complete homework assignment</p>
+        <div class="input-group">
+          <label for="student-name-2">Name</label>
+          <input type="text" id="student-name-2" required />
+        </div>
+        <div class="input-group">
+          <label for="student-id-2">Student ID</label>
+          <input type="text" id="student-id-2" required />
+        </div>
+        <div class="input-group">
+          <label for="student-file-2">Upload Assignment</label>
+          <input type="file" id="student-file-2" required />
+        </div>
+        <div class="btns">
+          <button class="submit-btn">Submit</button>
+        </div>
+      </div>
+      <!-- options form -->
       <div class="category-details">
         <img src="images/boy.png" alt="" id="category-img" />
         <div class="details">
@@ -164,6 +216,7 @@
           </div>
         </div>
       </div>
+      
     </div>
     <div class="add-task-btn">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
