--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
           </svg>
         </div>
+        <!-- Coin count display -->
+        <div class="coin-display">
+          <img src="diamond.png" alt="Coin Icon" class="coin-icon" /> <!-- Replace src with your actual coin image -->
+          <span id="coin-count">0</span>
+        </div>
         <!-- Welcome message with user name and task count -->
         <div class="welcome">
           <div class="content">
@@ -211,10 +216,10 @@
           <option value="hard">Hard</option>
         </select>
       </div>
-      <div class="btns">
-        <button class="cancel-btn">Cancel</button>
-        <button class="add-btn">Add</button>
-      </div>
+        <div class="btns">
+          <button class="add-btn">Add</button>
+          <button class="cancel-btn">Cancel</button>
+        </div>
     </div>
 
     <!-- Empty screen for additional forms -->
