--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Welcome message with user name and task count -->
         <div class="welcome">
           <div class="content">
-            <h1>Hello Fiqri</h1>
+            <h1>Hello User!</h1>
             <p>A new day, a new chance to improve yourself!</p>
           </div>
           <!-- User image with backdrop -->
