--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Welcome message with user name and task count -->
         <div class="welcome">
           <div class="content">
-            <h1>Hello User!</h1>
+            <h1>Hello Fiqri</h1>
             <p>A new day, a new chance to improve yourself!</p>
           </div>
           <!-- User image with backdrop -->
@@ -236,10 +236,10 @@
 
       <div class="title">
         <img src="1 up.png" alt="Form Image" class="form-image">
-        <h3>LEVEL-UP TASK</h3>
+        <h3>GRAND MISSIONS</h3>
         <span class="icon-level-up"></span>
       </div>
-      <p>Complete the task to level up</p>
+      <p>Complete the mission to ASCEND up</p>
 
       <div class="form">
         <div class="title">PHYSICAL
@@ -323,10 +323,10 @@
           <input id="file" class="input" type="file" name="file" required />
           <label for="file" class="placeholder">Attach File</label>
         </div>
-        <button type="text" class="submit" id="nun-submit">submit</button>
+        <button type="text" class="submit" id="non-submit">submit</button>
       </div>
     </div>
-
+    
     <!--  Leaderboard screen -->
     <div class="leaderboard-screen" id="leaderboard-screen">
       <section class="container" id="leaderboard">
