--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!-- User image with backdrop -->
           <div class="img">
             <div class="hero">
-              <img src="hero.png" alt="" id="hero"/>
+              <img src=".png" alt="" id="hero"/>
             </div>
 
             <div class="backdrop"></div>
